--- a/src/index.html
+++ b/src/index.html
@@ -7,39 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="noindex, nofollow" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <style>
-      p-button,
-      p-button-pure,
-      p-checkbox-wrapper,
-      p-content-wrapper,
-      p-divider,
-      p-fieldset-wrapper,
-      p-flex,
-      p-flex-item,
-      p-grid,
-      p-grid-item,
-      p-headline,
-      p-icon,
-      p-link,
-      p-link-pure,
-      p-link-social,
-      p-marque,
-      p-pagination,
-      p-radio-button-wrapper,
-      p-select-wrapper,
-      p-spinner,
-      p-text,
-      p-text-field-wrapper,
-      p-text-list,
-      p-text-list-item,
-      p-textarea-wrapper {
-        visibility: hidden;
-      }
-    </style>
-    <link
-      rel="stylesheet"
-      href="https://cdn.ui.porsche.com/porsche-design-system/style/font-face.min.677d41d9905a04aadcb253f71e5f71e9.css"
-    />
+
+    <!-- prettier-ignore -->
+    <style>p-button,p-button-pure,p-checkbox-wrapper,p-content-wrapper,p-divider,p-fieldset-wrapper,p-flex,p-flex-item,p-grid,p-grid-item,p-headline,p-icon,p-link,p-link-pure,p-link-social,p-marque,p-pagination,p-radio-button-wrapper,p-select-wrapper,p-spinner,p-text,p-text-field-wrapper,p-text-list,p-text-list-item,p-textarea-wrapper{visibility:hidden}</style>
+    <!-- prettier-ignore -->
+    <link rel=stylesheet href=https://cdn.ui.porsche.com/porsche-design-system/styles/font-face.min.de7353ac41430a74da152a5bf0e7bb5b.css>
   </head>
   <body>
     <app-root></app-root>
