feat: implement browser notification overlay | mh / bh | #514

--- a/src/index.html
+++ b/src/index.html
@@ -15,5 +15,7 @@
   </head>
   <body>
     <app-root></app-root>
+    <!-- prettier-ignore -->
+    <script>!function(){if(!("customElements"in window)){var n=document.createElement("script");n.src="https://cdn.ui.porsche.com/browser-notification/overlay.min.2.0.0.js",document.body.appendChild(n)}}();</script>
   </body>
 </html>
