--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <!-- prettier-ignore -->
     <!--PLACEHOLDER_PORSCHE_DESIGN_SYSTEM_FONT_FACE_STYLESHEET--><link rel=stylesheet href=https://cdn.ui.porsche.com/porsche-design-system/styles/font-face.min.6fdc3844907953937260ca9bdb49bf8d.css type=text/css crossorigin>
     <!-- prettier-ignore -->
-    <!--PLACEHOLDER_PORSCHE_DESIGN_SYSTEM_INITIAL_STYLES--><style>p-banner,p-button,p-button-pure,p-checkbox-wrapper,p-content-wrapper,p-divider,p-fieldset-wrapper,p-flex,p-flex-item,p-grid,p-grid-item,p-headline,p-icon,p-link,p-link-pure,p-link-social,p-marque,p-modal,p-pagination,p-radio-button-wrapper,p-select-wrapper,p-spinner,p-tabs,p-tabs-bar,p-tabs-item,p-text,p-text-field-wrapper,p-text-list,p-text-list-item,p-textarea-wrapper{visibility:hidden}</style>
+    <!--PLACEHOLDER_PORSCHE_DESIGN_SYSTEM_INITIAL_STYLES--><style>p-banner,p-button,p-button-group,p-button-pure,p-checkbox-wrapper,p-content-wrapper,p-divider,p-fieldset-wrapper,p-flex,p-flex-item,p-grid,p-grid-item,p-headline,p-icon,p-link,p-link-pure,p-link-social,p-marque,p-modal,p-pagination,p-radio-button-wrapper,p-select-wrapper,p-spinner,p-tabs,p-tabs-bar,p-tabs-item,p-text,p-text-field-wrapper,p-text-list,p-text-list-item,p-textarea-wrapper{visibility:hidden}</style>
 
   </head>
   <body>
