feat: upgrade angular / typescript | mh

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,6 @@
   <body>
     <app-root></app-root>
     <!-- prettier-ignore -->
-    <script>!function(){if(!("customElements"in window)){var n=document.createElement("script");n.src="https://cdn.ui.porsche.com/browser-notification/overlay.min.2.0.0.js",document.body.appendChild(n)}}();</script>
+    <script>!function(){if(["ResizeObserver","IntersectionObserver","MutationObserver","customElements"].some((function(e){return!(e in window)}))){var e=document.createElement("script");e.src="https://cdn.ui.porsche.com/browser-notification/overlay.min.3.0.0.js",document.body.appendChild(e)}}();</script>
   </body>
 </html>
