feat: add standalone component example | mw

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Sample Integration Angular</title>
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="robots" content="noindex, nofollow" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
-  <body>
-    <app-root></app-root>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <title>Sample Integration Angular</title>
+  <base href="/" />
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <meta content="noindex, nofollow" name="robots" />
+  <link href="favicon.ico" rel="icon" type="image/x-icon" />
+</head>
+<body>
+  <app-component-standalone></app-component-standalone>
+
+  <app-root></app-root>
+</body>
 </html>
