fix: remove outdated main nav dependency and add it directly via CDN | oh

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <meta content="noindex, nofollow" name="robots" />
   <link href="favicon.ico" rel="icon" type="image/x-icon" />
+  <script type="module" src="//nav.porsche.com/00BC524/porsche-navigation.esm.js"></script>
+  <link rel="stylesheet" href="https://nav.porsche.com/00BC524/porsche-navigation.css"/>
 </head>
 <body>
   <app-component-standalone></app-component-standalone>
